# fastapi-nested-route-sample

./: README.md  pyproject.toml
nested/: __init__.py  items.py  root.py  users.py
